Renamed RegReaderData to RegReader Updated RegReader to return a set of (new) Register.Read objects. Updated all the users of RegReader Made MemEvent a RegReader.